# Attendence-sys

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  REQUIREMENTS.md  ROADMAP.md  docker-compose.yml  pyproject.toml  pytest.ini
project/: .env.example  .gitignore  .rsyncignore  ARCHITECTURE.md  Dockerfile  README.md  REQUIREMENTS.md  ROADMAP.md  SECURITY_REVIEW_2026-04-08.md  SYSTEM_OVERVIEW.md  WORKSPACE_LAYOUT.md  alembic.ini  alembic_verify.db  docker-compose.yml  download_models.py  pyproject.toml  pytest.ini
project/alembic/: env.py
project/alembic/versions/: 20260408_01_student_embedding_quality_columns.py  20260410_01_detection_track_id.py  20260410_02_detection_cross_camera_source_track_id.py  20260410_03_vectorscale_diskann_index.py  20260410_04_phase8_governance_tables.py  20260411_01_detection_student_id_nullable.py
project/backend/: main.py
project/backend/api/: deps.py
project/backend/core/: config.py  constants.py  security.py
project/backend/data/: camera_profiles.json  camera_transition_priors.json  system_settings.json
project/backend/db/: session.py  vector.py
project/backend/models/: audit.py  (+5 more)
project/docs/: PHASE_STATUS.md  PROJECT_REFERENCE.md
project/frontend/: USERS_REDESIGN_SPEC.md  index.html  package-lock.json  vite.config.js
project/scripts/: ann_benchmark.py  baseline_eval.py  build_triton_engines.ps1  camera_client.py  daily_github_push.ps1  enroll_face.py  fairness_audit.py  model_comparison.py  seed.py  smoke_test.py  sync_workspace.ps1  threshold_calibration.py
project/tests/: conftest.py  test_auth.py  test_endpoints.py  test_units.py
project/triton_models/: README.md
(+151 files in other folders)
